# grip

./: .gitignore  CMakeLists.txt  README.md  TODO
doc/: INSTALL.md
src/: CMakeLists.txt  Makefile  case.h  compressedids.cpp  compressedids.h  config.h  dbreader.cpp  dbreader.h  dir-posix.cpp  dir.cpp  dir.h  egrip.cpp  error.h  file.cpp  file.h  fileline.cpp  filelist.cpp  finder.cpp  finder.h  glob.cpp  glob.h  globfilters.def  grep.cpp  grep.h  grip.cpp  gripgen.cpp  ids.cpp  ids.h  indexer.cpp  indexer.h  node.cpp  node.h  pattern.cpp  pattern.h  print.cpp  print.h  queue.h
src/general/: CMakeLists.txt  case.h  compressedids.cpp  compressedids.h  config.h  dbreader.cpp  dbreader.h  dir-boost.cpp  dir.cpp  error.cpp  error.h  file.cpp  file.h  fileline.cpp  fileline.h  filelist.h  general.mk  ids.cpp  ids.h  index.h  node.cpp  node.h  print.cpp  queue.h
src/grip/: CMakeLists.txt  fgrip.cpp  glob.cpp  glob.h  grep.cpp  grep.h  grip-verify.cpp  grip.cpp  grip.mk  pattern.cpp  pattern.h
src/gripgen/: CMakeLists.txt  gripgen.cpp  gripgen.mk  indexer.cpp  indexer.h  sortdb.cpp
src/scripts/: install.cmd  mkdir.cmd  rm.cmd
src/test/: CMakeLists.txt  compressedids.cpp  grip-verify-test.sh  ids.cpp  ids.h  pattern.cpp  test.cpp  test.mk
